adds code to pass feature test for average astro age

--- a/app/views/astronauts/index.html.erb
+++ b/app/views/astronauts/index.html.erb
@@ -1,3 +1,5 @@
+Average Age: <%= Astronaut.average_age %>
+
 <% @astronauts.each do |astronaut| %>
   <p><%= astronaut.name %></p>
   <p><%= astronaut.age %></p>
